spending reports added & profile removed (errors)

--- a/budget/templates/budget/reports.html
+++ b/budget/templates/budget/reports.html
@@ -1,6 +1,11 @@
 {% extends 'budget/base.html' %}
 
 {% block body %}
+{{ category_names|json_script:"category_names"}}
+{{ category_types|json_script:"category_types"}}
+{{ label_names|json_script:"label_names"}}
+{{ label_amountRec|json_script:"label_amountRec"}}
+{{ label_amountPlanned|json_script:"label_amountPlanned"}}
 
     <div class="col py-3">
         <div class="container-fluid">
@@ -42,6 +47,131 @@
                                 </div>
                                 <div class="tab-pane fade" id="categories-tab-pane" role="tabpanel"
                                      aria-labelledby="categories-tab" tabindex="0">Spending Categories charts here
+                                     <div class="row mt-2">
+                                        <div class="col-md-6">
+                                            <div class="card text-white bg-dark h-100 bg-opacity-25">
+                                                <div class="card-body">
+                                                    <p>Your Categories</p>
+                                                    <canvas id="myChart1"></canvas>
+                                                    <script type="text/javascript">
+                                                    var categoryNames = JSON.parse(document.getElementById('category_names').textContent)
+                                                    console.log(categoryNames)
+                                                    $(document).ready(function(){
+                                                        var ctx = document.getElementById('myChart1').getContext('2d');
+                                                        var myCategory = new Chart(ctx, {
+                                                            type: 'doughnut',
+                                                            data: {
+                                                                labels: categoryNames,
+                                                                datasets: [{
+                                                                    label: 'category names',
+                                                                    data: categoryNames.map(category => 1),
+                                                                    backgroundColor: [
+                                                                        'rgba(255, 99, 132, 0.2)', 
+                                                                        'rgba(54, 162, 235, 0.2)',
+                                                                        'rgba(255, 206, 86, 0.2)',
+                                                                        'rgba(75, 192, 192, 0.2)',
+                                                                        'rgba(153, 102, 255, 0.2)',
+                                                                        'rgba(255, 159, 64, 0.2)',
+                                                                        'rgba(255, 99, 132, 0.2)', 
+                                                                        'rgba(54, 162, 235, 0.2)',
+                                                                        'rgba(255, 206, 86, 0.2)',
+                                                                        'rgba(75, 192, 192, 0.2)',
+                                                                        'rgba(153, 102, 255, 0.2)',
+                                                                        'rgba(255, 159, 64, 0.2)',
+                                                                    ],
+                                                                    borderColor: [
+                                                                        'rgba(255, 99, 132, 1)',
+                                                                        'rgba(54, 162, 235, 1)',
+                                                                        'rgba(255, 206, 86, 1)',
+                                                                        'rgba(75, 192, 192, 1)',
+                                                                        'rgba(153, 102, 255, 1)',
+                                                                        'rgba(255, 159, 64, 1)',
+                                                                        'rgba(255, 99, 132, 1)',
+                                                                        'rgba(54, 162, 235, 1)',
+                                                                        'rgba(255, 206, 86, 1)',
+                                                                        'rgba(75, 192, 192, 1)',
+                                                                        'rgba(153, 102, 255, 1)',
+                                                                        'rgba(255, 159, 64, 1)',
+                                                                    ],
+                                                                    borderWidth: 1
+                                                                }]
+                                                            },
+                                                            options: {
+                                                                scales: {
+                                                                    y: {
+                                                                        beginAtZero: true
+                                                                    }
+                                                                }
+                                                            }
+                                                });
+                                                    });
+                                                </script>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="card text-white bg-dark h-100 bg-opacity-25">
+                                                <div class="card-body">
+                                                    <p>Your Category Types</p>
+                                                    <canvas id="myChart2"></canvas>
+                                                    <script type="text/javascript">
+                                                    var categoryTypes = JSON.parse(document.getElementById('category_types').textContent)
+                                                    console.log(categoryTypes)
+                                                    $(document).ready(function(){
+                                                        var ctx = document.getElementById('myChart2').getContext('2d');
+                                                        var myCategory = new Chart(ctx, {
+                                                            type: 'doughnut',
+                                                            data: {
+                                                                labels: categoryTypes,
+                                                                datasets: [{
+                                                                    label: 'Category Types',
+                                                                    data: categoryTypes.map(category => 1),
+                                                                    backgroundColor: [
+                                                                        'rgba(255, 99, 132, 0.2)', 
+                                                                        'rgba(54, 162, 235, 0.2)',
+                                                                        'rgba(255, 206, 86, 0.2)',
+                                                                        'rgba(75, 192, 192, 0.2)',
+                                                                        'rgba(153, 102, 255, 0.2)',
+                                                                        'rgba(255, 159, 64, 0.2)',
+                                                                        'rgba(255, 99, 132, 0.2)', 
+                                                                        'rgba(54, 162, 235, 0.2)',
+                                                                        'rgba(255, 206, 86, 0.2)',
+                                                                        'rgba(75, 192, 192, 0.2)',
+                                                                        'rgba(153, 102, 255, 0.2)',
+                                                                        'rgba(255, 159, 64, 0.2)',
+                                                                    ],
+                                                                    
+                                                                    borderColor: [
+                                                                        'rgba(255, 99, 132, 1)',
+                                                                        'rgba(54, 162, 235, 1)',
+                                                                        'rgba(255, 206, 86, 1)',
+                                                                        'rgba(75, 192, 192, 1)',
+                                                                        'rgba(153, 102, 255, 1)',
+                                                                        'rgba(255, 159, 64, 1)',
+                                                                        'rgba(255, 99, 132, 1)',
+                                                                        'rgba(54, 162, 235, 1)',
+                                                                        'rgba(255, 206, 86, 1)',
+                                                                        'rgba(75, 192, 192, 1)',
+                                                                        'rgba(153, 102, 255, 1)',
+                                                                        'rgba(255, 159, 64, 1)',
+                                                                    ],
+                                                                    borderWidth: 1
+                                                                }]
+                                                            },
+                                                            options: {
+                                                                scales: {
+                                                                    y: {
+                                                                        beginAtZero: true
+                                                                    }
+                                                                }
+                                                            }
+                                                });
+                                                    });
+                                                      </script>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
