remove label dashboard your categories

--- a/budget/templates/budget/dashboard.html
+++ b/budget/templates/budget/dashboard.html
@@ -65,12 +65,23 @@
                                     }]
                                 },
                                 options: {
+                                    legend: {
+                                        display: false,
+                                    },
                                     scales: {
                                         y: {
                                             beginAtZero: true
                                         }
+                                      
+                                    },
+                                   
+
+
+
+
+
                                     }
-                                }
+                                
                     });
                         });
                     </script>
