no labels on donuts

--- a/budget/templates/budget/dashboard.html
+++ b/budget/templates/budget/dashboard.html
@@ -72,16 +72,8 @@
                                         y: {
                                             beginAtZero: true
                                         }
-                                      
                                     },
-                                   
-
-
-
-
-
-                                    }
-                                
+                                }                       
                     });
                         });
                     </script>
@@ -138,12 +130,15 @@
                                     }]
                                 },
                                 options: {
+                                    legend: {
+                                        display: false,
+                                    },
                                     scales: {
                                         y: {
                                             beginAtZero: true
                                         }
-                                    }
-                                }
+                                    },
+                                }            
                     });
                         });
                           </script>
