--- a/budget/templates/budget/reports.html
+++ b/budget/templates/budget/reports.html
@@ -41,6 +41,142 @@
                             <div class="tab-content" id="reportsTabContent">
                                 <div class="tab-pane fade show active" id="overview-tab-pane" role="tabpanel"
                                      aria-labelledby="overview-tab" tabindex="0">Budget Overview charts here
+                                     <div class="row mt-2">
+                                        <div class="col-md-6">
+                                            <div class="card text-white bg-dark h-100 bg-opacity-25">
+                                                <div class="card-body">
+                                                    <p>amount planned for each label/subcategory</p>
+                                                    <canvas id="myChart3"></canvas>
+                                                    <script type="text/javascript">
+                                                    var labelNames = JSON.parse(document.getElementById('label_names').textContent)
+                                                    console.log(labelNames)
+                                                    var labelAmountRec = JSON.parse(document.getElementById('label_amountRec').textContent)
+                                                    console.log(labelAmountRec)
+                                                    var labelAmountPlanned = JSON.parse(document.getElementById('label_amountPlanned').textContent)
+                                                    console.log(labelAmountPlanned)
+                                                    var amountremaining = labelAmountPlanned - labelAmountRec
+                                                    console.log(amountremaining)
+                                                    $(document).ready(function(){
+                                                        var ctx = document.getElementById('myChart3').getContext('2d');
+                                                        var myLabel = new Chart(ctx, {
+                                                            type: 'bar',
+                                                            data: {
+                                                                labels: labelNames,
+                                                                datasets: [{
+                                                                    label: 'amount planned',
+                                                                    data: labelAmountPlanned, 
+                                                                    backgroundColor: [
+                                                                        'rgba(255, 99, 132, 0.2)', 
+                                                                        'rgba(54, 162, 235, 0.2)',
+                                                                        'rgba(255, 206, 86, 0.2)',
+                                                                        'rgba(75, 192, 192, 0.2)',
+                                                                        'rgba(153, 102, 255, 0.2)',
+                                                                        'rgba(255, 159, 64, 0.2)',
+                                                                        'rgba(255, 99, 132, 0.2)', 
+                                                                        'rgba(54, 162, 235, 0.2)',
+                                                                        'rgba(255, 206, 86, 0.2)',
+                                                                        'rgba(75, 192, 192, 0.2)',
+                                                                        'rgba(153, 102, 255, 0.2)',
+                                                                        'rgba(255, 159, 64, 0.2)',
+                                                                    ],
+                                                                    borderColor: [
+                                                                        'rgba(255, 99, 132, 1)',
+                                                                        'rgba(54, 162, 235, 1)',
+                                                                        'rgba(255, 206, 86, 1)',
+                                                                        'rgba(75, 192, 192, 1)',
+                                                                        'rgba(153, 102, 255, 1)',
+                                                                        'rgba(255, 159, 64, 1)',
+                                                                        'rgba(255, 99, 132, 1)',
+                                                                        'rgba(54, 162, 235, 1)',
+                                                                        'rgba(255, 206, 86, 1)',
+                                                                        'rgba(75, 192, 192, 1)',
+                                                                        'rgba(153, 102, 255, 1)',
+                                                                        'rgba(255, 159, 64, 1)',
+                                                                    ],
+                                                                    borderWidth: 1
+                                                                }]
+                                                            },
+                                                            options: {
+                                                                scales: {
+                                                                    y: {
+                                                                        beginAtZero: true
+                                                                    }
+                                                                }
+                                                            }
+                                                });
+                                                    });
+                                                </script>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="card text-white bg-dark h-100 bg-opacity-25">
+                                                <div class="card-body">
+                                                    <p>amount received for each label/subcategory</p>
+                                                    <canvas id="myChart4"></canvas>
+                                                    <script type="text/javascript">
+                                                    var labelNames = JSON.parse(document.getElementById('label_names').textContent)
+                                                    console.log(labelNames)
+                                                    var labelAmountRec = JSON.parse(document.getElementById('label_amountRec').textContent)
+                                                    console.log(labelAmountRec)
+                                                    var labelAmountPlanned = JSON.parse(document.getElementById('label_amountPlanned').textContent)
+                                                    console.log(labelAmountPlanned)
+                                                    var amountremaining = labelAmountPlanned - labelAmountRec
+                                                    console.log(amountremaining)
+                                                    $(document).ready(function(){
+                                                        var ctx = document.getElementById('myChart4').getContext('2d');
+                                                        var myLabel = new Chart(ctx, {
+                                                            type: 'bar',
+                                                            data: {
+                                                                labels: labelNames,
+                                                                datasets: [{
+                                                                    label: 'amount received',
+                                                                    data: labelAmountRec, 
+                                                                    backgroundColor: [
+                                                                        'rgba(255, 99, 132, 0.2)', 
+                                                                        'rgba(54, 162, 235, 0.2)',
+                                                                        'rgba(255, 206, 86, 0.2)',
+                                                                        'rgba(75, 192, 192, 0.2)',
+                                                                        'rgba(153, 102, 255, 0.2)',
+                                                                        'rgba(255, 159, 64, 0.2)',
+                                                                        'rgba(255, 99, 132, 0.2)', 
+                                                                        'rgba(54, 162, 235, 0.2)',
+                                                                        'rgba(255, 206, 86, 0.2)',
+                                                                        'rgba(75, 192, 192, 0.2)',
+                                                                        'rgba(153, 102, 255, 0.2)',
+                                                                        'rgba(255, 159, 64, 0.2)',
+                                                                    ],
+                                                                    borderColor: [
+                                                                        'rgba(255, 99, 132, 1)',
+                                                                        'rgba(54, 162, 235, 1)',
+                                                                        'rgba(255, 206, 86, 1)',
+                                                                        'rgba(75, 192, 192, 1)',
+                                                                        'rgba(153, 102, 255, 1)',
+                                                                        'rgba(255, 159, 64, 1)',
+                                                                        'rgba(255, 99, 132, 1)',
+                                                                        'rgba(54, 162, 235, 1)',
+                                                                        'rgba(255, 206, 86, 1)',
+                                                                        'rgba(75, 192, 192, 1)',
+                                                                        'rgba(153, 102, 255, 1)',
+                                                                        'rgba(255, 159, 64, 1)',
+                                                                    ],
+                                                                    borderWidth: 1
+                                                                }]
+                                                            },
+                                                            options: {
+                                                                scales: {
+                                                                    y: {
+                                                                        beginAtZero: true
+                                                                    }
+                                                                }
+                                                            }
+                                                });
+                                                    });
+                                                </script>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="tab-pane fade" id="monthly-tab-pane" role="tabpanel"
                                      aria-labelledby="monthly-tab" tabindex="0">Monthly Spending charts here
@@ -97,12 +233,15 @@
                                                                 }]
                                                             },
                                                             options: {
+                                                                legend: {
+                                                                    display: false,
+                                                                },
                                                                 scales: {
                                                                     y: {
                                                                         beginAtZero: true
                                                                     }
-                                                                }
-                                                            }
+                                                                },
+                                                            }            
                                                 });
                                                     });
                                                 </script>
@@ -159,12 +298,15 @@
                                                                 }]
                                                             },
                                                             options: {
+                                                                legend: {
+                                                                    display: false,
+                                                                },
                                                                 scales: {
                                                                     y: {
                                                                         beginAtZero: true
                                                                     }
-                                                                }
-                                                            }
+                                                                },
+                                                            }            
                                                 });
                                                     });
                                                       </script>
