--- a/budget/templates/budget/dashboard.html
+++ b/budget/templates/budget/dashboard.html
@@ -6,6 +6,12 @@
 {{ label_names|json_script:"label_names"}}
 {{ label_amountRec|json_script:"label_amountRec"}}
 {{ label_amountPlanned|json_script:"label_amountPlanned"}}
+{{ transaction_description|json_script:"transaction_description"}}
+{{ transaction_type|json_script:"transaction_type"}}
+{{ transaction_label|json_script:"transaction_label"}}
+{{ transaction_amount|json_script:"transaction_amount"}}
+{{ transaction_date|json_script:"transaction_date"}}
+
 
 
 <div class="col py-3">
@@ -88,6 +94,7 @@
                         <script type="text/javascript">
                         var categoryTypes = JSON.parse(document.getElementById('category_types').textContent)
                         console.log(categoryTypes)
+
                         $(document).ready(function(){
                             var ctx = document.getElementById('myChart2').getContext('2d');
                             var myCategory = new Chart(ctx, {
@@ -167,39 +174,18 @@
                                 type: 'bar',
                                 data: {
                                     labels: labelNames,
-                                    datasets: [{
-                                        label: 'amount planned',
-                                        data: labelAmountPlanned, 
-                                        backgroundColor: [
-                                            'rgba(255, 99, 132, 0.2)', 
-                                            'rgba(54, 162, 235, 0.2)',
-                                            'rgba(255, 206, 86, 0.2)',
-                                            'rgba(75, 192, 192, 0.2)',
-                                            'rgba(153, 102, 255, 0.2)',
-                                            'rgba(255, 159, 64, 0.2)',
-                                            'rgba(255, 99, 132, 0.2)', 
-                                            'rgba(54, 162, 235, 0.2)',
-                                            'rgba(255, 206, 86, 0.2)',
-                                            'rgba(75, 192, 192, 0.2)',
-                                            'rgba(153, 102, 255, 0.2)',
-                                            'rgba(255, 159, 64, 0.2)',
-                                        ],
-                                        borderColor: [
-                                            'rgba(255, 99, 132, 1)',
-                                            'rgba(54, 162, 235, 1)',
-                                            'rgba(255, 206, 86, 1)',
-                                            'rgba(75, 192, 192, 1)',
-                                            'rgba(153, 102, 255, 1)',
-                                            'rgba(255, 159, 64, 1)',
-                                            'rgba(255, 99, 132, 1)',
-                                            'rgba(54, 162, 235, 1)',
-                                            'rgba(255, 206, 86, 1)',
-                                            'rgba(75, 192, 192, 1)',
-                                            'rgba(153, 102, 255, 1)',
-                                            'rgba(255, 159, 64, 1)',
-                                        ],
-                                        borderWidth: 1
-                                    }]
+                                    datasets: [
+                                    {
+                                    label: 'amount planned',
+                                    backgroundColor: "#3e95cd",
+                                    data: labelAmountPlanned
+                                    }, 
+                                    {
+                                    label: 'amount received',
+                                    backgroundColor: "#8e5ea2",
+                                    data: labelAmountRec,
+                                    },
+                                   ]
                                 },
                                 options: {
                                     scales: {
@@ -217,26 +203,28 @@
             <div class="col-md-6">
                 <div class="card text-white bg-dark h-100 bg-opacity-25">
                     <div class="card-body">
-                        <p>amount received for each label/subcategory</p>
+                        <p>transaction graph</p>
                         <canvas id="myChart4"></canvas>
                         <script type="text/javascript">
-                        var labelNames = JSON.parse(document.getElementById('label_names').textContent)
-                        console.log(labelNames)
-                        var labelAmountRec = JSON.parse(document.getElementById('label_amountRec').textContent)
-                        console.log(labelAmountRec)
-                        var labelAmountPlanned = JSON.parse(document.getElementById('label_amountPlanned').textContent)
-                        console.log(labelAmountPlanned)
-                        var amountremaining = labelAmountPlanned - labelAmountRec
-                        console.log(amountremaining)
+                        var transactionDescription = JSON.parse(document.getElementById('transaction_description').textContent)
+                        console.log(transactionDescription)
+                        var transactionType = JSON.parse(document.getElementById('transaction_type').textContent)
+                        console.log(transactionType)
+                        var transactionLabel = JSON.parse(document.getElementById('transaction_label').textContent)
+                        console.log(transactionLabel)
+                        var transactionAmount = JSON.parse(document.getElementById('transaction_amount').textContent)
+                        console.log(transactionAmount)
+                        var transactionDate= JSON.parse(document.getElementById('transaction_date').textContent)
+                        console.log(transactionDate)
                         $(document).ready(function(){
                             var ctx = document.getElementById('myChart4').getContext('2d');
                             var myLabel = new Chart(ctx, {
                                 type: 'bar',
                                 data: {
-                                    labels: labelNames,
+                                    labels: transactionDate,
                                     datasets: [{
                                         label: 'amount received',
-                                        data: labelAmountRec, 
+                                        data: transactionAmount, 
                                         backgroundColor: [
                                             'rgba(255, 99, 132, 0.2)', 
                                             'rgba(54, 162, 235, 0.2)',
@@ -343,6 +331,11 @@
                                             beginAtZero: true
                                         }
                                     }
+                                    xAxes: [{
+                                        ticks: {
+                                            autoSkip: true,
+                                            maxTicksLimit: 5,
+                                    
                                 }
                     });
                         });
