--- a/budget/templates/budget/category-form.html
+++ b/budget/templates/budget/category-form.html
@@ -1,7 +1,33 @@
 {% extends 'budget/base.html' %}
 
 {% block body %}
+<div class="col py-3">
+    <div class="container-fluid">
+        <div class="row">
+            <h1>Add a Category</h1>
+        </div>
+        <div class="row mt-2">
+            <div class="bg-dark h-100 bg-opacity-25 col-md-8">
+                <form method="POST" class="my-4 mx-4 text-light">
+                    {% csrf_token %}
+                    <div class="">
+                        <div class="form-group py-1">
+                            <label for="name">Category Name</label>
+                            {{ form.name }}
+                        </div>
+                        <div class="form-group py-1">
+                            <label for="type">Category Type</label>
+                            {{ form.type }}
+                        </div>
+                    </div>
+                    <br>
+                    <button type="submit" class="btn btn-primary btn-custom-1 px-5">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
-<h1>Welcome to the EDIT/CREATE CATEGORY PAGE!</h1>
+
 
 {% endblock %}
