--- a/budget/templates/budget/label-form.html
+++ b/budget/templates/budget/label-form.html
@@ -1,7 +1,49 @@
 {% extends 'budget/base.html' %}
 
 {% block body %}
+<div class="col py-3">
+    <div class="container-fluid">
+        <div class="row">
+            <h1>Add a Label</h1>
+        </div>
+        <div class="row mt-2">
+            <div class="bg-dark h-100 bg-opacity-25 col-md-8">
+                <form method="POST" class="my-4 mx-4 text-light">
+                    {% csrf_token %}
+                    <div class="">
+                        <div class="form-group py-1">
+                            <label for="category">Category</label>
+                            {{ form.category }}
+                        </div>
+                        <div class="form-group py-1">
+                            <label for="name">Name</label>
+                            {{ form.name }}
+                        </div>
+                        <div class="form-group py-1">
+                            <label for="planned">Amount Planned</label>
+                            {{ form.amount_planned }}
+                        </div>
+                        <div class="form-group py-1">
+                            <label for="planned">Amount Received</label>
+                            {{ form.amount_received }}
+                        </div>
+                        <div class="form-group py-1">
+                            <label for="date">Due Date</label>
+                            {{ form.due_date }}
+                        </div>
+                        <div class="form-group py-1">
+                            <label for="notes">Notes</label>
+                            {{ form.notes }}
+                        </div>
+                    </div>
+                    <br>
+                    <button type="submit" class="btn btn-primary btn-custom-1 px-5">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
-<h1>Welcome to the EDIT/CREATE LABEL PAGE!</h1>
+
 
 {% endblock %}
