--- a/budget/templates/budget/transaction-form.html
+++ b/budget/templates/budget/transaction-form.html
@@ -1,13 +1,45 @@
 {% extends 'budget/base.html' %}
 
 {% block body %}
+<div class="col py-3">
+    <div class="container-fluid">
+        <div class="row">
+            <h1>Add a Transaction</h1>
+        </div>
+        <div class="row mt-2">
+            <div class="bg-dark h-100 bg-opacity-25 col-md-8">
+                <form method="POST" class="my-4 mx-4 text-light">
+                    {% csrf_token %}
+                    <div class="">
+                        <div class="form-group py-1">
+                            <label for="type">Transaction Type</label>
+                            {{ form.type }}
+                        </div>
+                        <div class="form-group py-1">
+                            <label for="Label">Label</label>
+                            {{ form.label }}
+                        </div>
+                        <div class="form-group py-1">
+                            <label for="desc">Description</label>
+                            {{ form.description }}
+                        </div>
+                        <div class="form-group py-1">
+                            <label for="amount">Amount</label>
+                            {{ form.amount }}
+                        </div>
+                        <div class="form-group py-1">
+                            <label for="date">Date</label>
+                            {{ form.date }}
+                        </div>
+                    </div>
+                    <br>
+                    <button type="submit" class="btn btn-primary btn-custom-1 px-5">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
-<h1>Welcome to the EDIT/CREATE TRANSACTION PAGE!</h1>
-<br>
-<form method="POST">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit" class="btn btn-secondary btn-green btn-custom-1 px-5">Submit</button>
-</form>
+
 
 {% endblock %}
